work thumbs side scroll fix + reach out button image overlap
remove overflow auto from wrapper
position relative to button to fix z index

--- a/css/project_template_styles.css
+++ b/css/project_template_styles.css
@@ -32,7 +32,23 @@ body{
     color: white;
     text-align: center;
     position: relative;
-    z-index: 2;
+    z-index: 3;
+}
+
+.brand-header-content-wrapper .header-icon-wrapper:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    width: 750px;
+    height: 750px;
+    z-index: -1;
+    background: -moz-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%, rgba(0,0,0,0.98) 1%, rgba(202,202,202,0) 62%, rgba(255,255,255,0) 78%);
+    background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%,rgba(0,0,0,0.98) 1%,rgba(202,202,202,0) 62%,rgba(255,255,255,0) 78%);
+    background: radial-gradient(ellipse at center, rgba(0,0,0,1) 0%,rgba(0, 0, 0, 0.78) 1%,rgba(202,202,202,0) 62%,rgba(255,255,255,0) 78%);
 }
 
 .brand-header-content-wrapper .header-icon-wrapper {
